messed with some animations and overflow stuff. hopefully no longer blows up on mobile

--- a/nav.css
+++ b/nav.css
@@ -77,6 +77,17 @@
     transition: all 0.3s ease;
 }
 
+@keyframes fade-in {
+    from{
+        opacity: 0;
+        transform: translateX(50px);
+    }
+    to{
+        opacity: 1;
+        transform: translateX(0px);
+    }
+}
+
 @media (max-width: 1200px) {
     #burger {
         display: flex;
@@ -90,12 +101,13 @@
         right: 0px;
         height: 95vh;
         top: 50vh;
-        background-color: #333;
-        transform: translateX(100%);
         transition: transform 0.5s ease-in;
+        overflow-x: hidden;
     }
     #nav-links ul {
         flex-direction: column;
+        background-color: #333;
+        opacity: 0
     }
     #nav-links li {
         opacity: 0;
@@ -108,26 +120,13 @@
     }
 }
 
-@keyframes link-fade {
-    from{
-        opacity: 0;
-        transform: translateX(50px);
-    }
-    to{
-        opacity: 1;
-        transform: translateX(0px);
-    }
-}
-.nav-active {
-    transform: translateX(0%) !important;
-}
-
 .toggle .bar1 {
-    transform: rotate(-45deg) translate(-8px, 6px);
+    transform: rotate(135deg) translate(7px, -7px);
 }
 .toggle .bar2 {
     opacity: 0;
+    transform: rotate(180deg);
 }
 .toggle .bar3 {
-    transform: rotate(45deg) translate(-8px, -6px);
+    transform: rotate(-135deg) translate(7px, 7px);
 }
